--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afrikreate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://LiguduMashige.github.io/ExhibitionApp",
+  "homepage": "https://LiguduMashige.github.io/DisplayAfrikreate",
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
@@ -29,12 +29,11 @@
     "yup": "^1.7.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "set HOST=0.0.0.0&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
