--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build"
+    "deploy": "npm run build && git subtree push --prefix build origin gh-pages"
   },
   "eslintConfig": {
     "extends": [
